/* These messages were generated by normanc. */
syntax = "proto3";
package norman.messages;

message GetUserByLogin {
	string login = 1;
}
message GetUserByLoginResponse {
	string userLogin = 1;
	string userEmail = 2;
}

message GetLoginByName {
	string first = 1;
}
message GetLoginByNameResponse {
	string userLogin = 1;
	string userEmail = 2;
}

